--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link href="https://languages.abranhe.com/logos.css" rel="stylesheet">
+
 <p>
   <a href="https://www.linkedin.com/in/mosesvk/" rel="nofollow noreferrer">
     <img src="https://i.stack.imgur.com/gVE0j.png" alt="linkedin"> LinkedIn
@@ -6,3 +8,16 @@
     <img src="https://i.stack.imgur.com/tskMh.png" alt="github"> Github
   </a>
 </p>
+
+<i class="programming lang-html"></i>
+<i class="programming lang-css"></i>
+<i class="programming lang-javascript"></i>
+<i class="programming lang-sql"></i>
+<i class="programming lang-react"></i>
+<i class="programming lang-redux"></i>
+<i class="programming lang-node-js"></i>
+<i class="programming lang-git"></i>
+
+
+
+
